--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ members = [
 [dependencies]
 rand = "0.8.3"
 restaurant = {version="0.1.0",path="./restaurant"}
+adder = {version="0.1.0",path="./adder"}
 
 
 [profile.release]
